--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "php": ">=5.4",
         "symfony/yaml": "v2.2.1",
         "monolog/monolog": "1.4.1",
+        "kevinlebrun/colors.php": "0.*",
         
         "peek/peek": "dev-master"
 
